# ghc-prof

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  ghc-prof.cabal  ghc-time-alloc-prof.cabal  ghc-time-alloc-profiling.cabal  stack.yaml
.github/workflows/: haskell-ci.yml
.travis/: export-HC.patch  ghc-prof.patch
src/Control/Monad/: Extras.hs
src/GHC/: Prof.hs
src/GHC/Prof/: CostCentreTree.hs  Parser.hs  Types.hs
src/GHC/RTS/: TimeAllocProfile.hs
src/GHC/RTS/TimeAllocProfile/: CostCentre.hs  CostCentreTree.hs  Internal.hs  Parser.hs  Types.hs
tests/: Regression.hs
tests/reports/: purs.prof
