name: ghc-time-profiling-reports
version: 0.0.0
synopsis: Library for parsing GHC time and allocation profiling reports
description: Library for parsing GHC time and allocation profiling reports
homepage: https://github.com/maoe/ghc-time-profiling-reports
license: BSD3
license-file: LICENSE
author: Mitsutoshi Aoe
maintainer: Mitsutoshi Aoe <maoe@foldr.in>
copyright: Copyright (C) 2013 Mitsutoshi Aoe
category: Development
build-type: Simple
cabal-version: >=1.10

library
  exposed-modules:
    GHC.RTS.TimeAllocProfile
    GHC.RTS.TimeAllocProfile.Parser
    GHC.RTS.TimeAllocProfile.Types
  build-depends:
     base >=4.6 && <4.7
   , attoparsec
   , containers
   , text
   , time
   , rosezipper
  hs-source-dirs: src
  default-language: Haskell2010
