name: ghc-time-profiling-reports
version: 0.0.0
synopsis: Library for parsing GHC time and allocation profiling reports
description: Library for parsing GHC time and allocation profiling reports
homepage: https://github.com/maoe/ghc-time-profiling-reports
license: BSD3
license-file: LICENSE
author: Mitsutoshi Aoe
maintainer: Mitsutoshi Aoe <maoe@foldr.in>
copyright: Copyright (C) 2013 Mitsutoshi Aoe
category: Development
build-type: Simple
cabal-version: >=1.10

library
  exposed-modules:
    GHC.RTS.TimeAllocProfile
    GHC.RTS.TimeAllocProfile.Internal
    GHC.RTS.TimeAllocProfile.Parser
    GHC.RTS.TimeAllocProfile.Types
    GHC.RTS.TimeAllocProfile.CostCentre
  build-depends:
      base >=4.6 && <4.7
    , attoparsec
    , containers
    , text
    , time
  hs-source-dirs: src
  ghc-options: -Wall
  default-language: Haskell2010

executable dump
  main-is: dump.hs
  hs-source-dirs: bin
  build-depends:
      base
    , attoparsec
    , containers
    , ghc-time-profiling-reports
    , text
  ghc-options: -Wall
  default-language: Haskell2010
